# korrektor-rs

./: .gitignore  Cargo.toml  default.nix  flake.nix  readme.md  result  shell.nix
.github/workflows/: publish.yml  test.yml
korrektor/: Cargo.toml
korrektor-utils/: Cargo.toml  readme.md
korrektor-utils/src/: lib.rs
korrektor/src/: error.rs  lib.rs
korrektor/src/utils/frequency/: mod.rs
korrektor/src/uzbek/alphabetic/: constants.rs  mod.rs
korrektor/src/uzbek/number/: constants.rs  helper.rs  mod.rs
korrektor/src/uzbek/tokenize/: constants.rs  mod.rs
src/: error.rs  lib.rs
src/utils/: mod.rs
src/utils/pcre/: mod.rs
src/utils/wrappers/: mod.rs
src/uzbek/: mod.rs
src/uzbek/alphabetic/: constants.rs  mod.rs
src/uzbek/corrector/: mod.rs  prelude.rs
src/uzbek/number/: helper.rs  mod.rs
src/uzbek/tokenize/: mod.rs
src/uzbek/transliterator/: mod.rs  prelude.rs
