[package]
name = "korrektor-utils"
version = "0.0.1"
edition = "2021"
homepage = "https://korrektor.uz"
repository = "https://github.com/uzinfocom-org/korrektor-rs"
description = "Utils library for korrektor-rs"
authors = [
    "Kate Crystal <crystalnyan@icloud.com> (https://kate.moe)"
]
keywords = ["uzbek", "language", "korrektor", "text-processing"]
readme = "readme.md"
categories = ["text-processing"]
license = "MIT OR Apache-2.0"
exclude = ["target", ".github"]

[dependencies]
regex = "1.7.0"
pcre = "0.2.3"